@@ -31,10 +31,10 @@
 #   Path and name of the public SSL certificate
 #
 class autofs::config::pki(
-  Stdlib::Absolutepath  $app_pki_external_source  = simplib::lookup('simp_options::pki::source', { 'default_value' => '/etc/pki/simp/x509' }),
-  Stdlib::Absolutepath  $app_pki_dir              = '/etc/pki/simp_apps/autofs/x509',
-  Stdlib::Absolutepath  $app_pki_cert             = "${app_pki_dir}/public/${::fqdn}.pub",
-  Stdlib::Absolutepath  $app_pki_key              = "${app_pki_dir}/private/${::fqdn}.pem"
+  Stdlib::Absolutepath $app_pki_external_source = simplib::lookup('simp_options::pki::source', { 'default_value' => '/etc/pki/simp/x509' }),
+  Stdlib::Absolutepath $app_pki_dir             = '/etc/pki/simp_apps/autofs/x509',
+  Stdlib::Absolutepath $app_pki_cert            = "${app_pki_dir}/public/${::fqdn}.pub",
+  Stdlib::Absolutepath $app_pki_key             = "${app_pki_dir}/private/${::fqdn}.pem"
 ) {
   assert_private()
 
