@@ -6,11 +6,13 @@ class autofs::install {
   assert_private()
 
   package { 'samba-client':
-    ensure => 'latest',
+    ensure => $::autofs::samba_package_ensure,
     before => Package['autofs']
   }
 
-  package { 'autofs': ensure  => 'latest' }
+  package { 'autofs':
+    ensure => $::autofs::autofs_package_ensure
+  }
 
   file { '/etc/autofs':
     ensure => 'directory',
